fix: sidebar header overflow fix + fileUpload cleanUp

--- a/src/components/formDesigner/styles/index.less
+++ b/src/components/formDesigner/styles/index.less
@@ -77,7 +77,6 @@
     }
 
     .sha-toolbox-panel {
-       width: @sha-left-sidebar-width - @sha-collapsible-sidebar-btn-height;
       &.active {
         // border: #61affe 1px dashed;
         // border-radius: 4px;
